Fix word wrap issue

--- a/assets/css/customized.css
+++ b/assets/css/customized.css
@@ -21,6 +21,7 @@
   padding: 5px 10px;
   left: 0;
   margin: 0;
+  width: max-content;
 }
 
 .tooltip:hover .tooltiptext {
